--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,12 @@
     </div>
 
     <div class="col-8 m-auto pt-3 pb-2 text-center">
+      <form method="get">
+          <input type="text" id="search" name="search" class="form-control" placeholder="Buscar ...">
+      </form>
+  </div>
+
+    <div class="col-8 m-auto pt-3 pb-2 text-center">
         <table class="table">
             <thead>
               <tr>
