--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="col-8 m-auto pt-2 pb-2 text-center">
-            <h1> Visualize </h1>
+            <h1> Info </h1>
         </div>
     
     {{Name}}
